# docs2formalspec

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: 00-implementation-policy.md  01-related-work.md  02-apyx.md  03-eval-log.md  04-speca-plugin.md  05-blast-radius.md  06-safety-properties.md  07-spec-defects.md  08-defi-vuln-patterns.md  09-end-to-end-workflow.md  10-institutional-defi-candidates.md  generate_architecture.py
lean/: D2fsSpecs.lean  README.md  lake-manifest.json  lakefile.toml
lean/D2fsSpecs/: Apyx.lean  ApyxBlastRadius.lean  ApyxProbe.lean  BlastRadius.lean  Safety.lean  SpecDefects.lean
outputs/apyx/: Apyx.lean  BlastRadius.lean  D2fsSpecs.lean  README.md  SPEC.md  Safety.lean  SpecDefects.lean  corpus.md  human_review_admin_rfq_coalition_drains.md  lake-manifest.json  lakefile.toml  leancheck.json  model.md  requirements.json  review.json  review_run2.json  review_run3.json
outputs/apyx-run2-archive/: model.md
outputs/apyx-run9-archive/: Apyx.lean
outputs/apyx/D2fsSpecs/: Apyx.lean  BlastRadius.lean  Safety.lean
outputs/apyx/archive/run11/: Apyx.lean  leancheck.json  review.json
outputs/apyx/archive/run13/: Apyx.lean  (+2 more)
outputs/apyx/textbook_admin_rfq_coalition/: build.sh  ch1.md  ch2.md  ch3.md  ch4.md  ch5.md  ch6.md  ch7.md  textbook.md
skill/: SKILL.md
src/d2fs/: __init__.py  cli.py  config.py  extract.py  ingest.py  leancheck.py  leangen.py  llm.py  pipeline.py  review.py
templates/blast-radius/: BlastRadius.template.lean  README.md
templates/invariants/: Invariants.template.lean  README.md
tests/: test_leancheck.py
(+7 files in other folders)
