[project]
name = "docs2formalspec"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "trafilatura>=2.1.0",
    "typer>=0.26.8",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/d2fs"]

[project.scripts]
d2fs = "d2fs.cli:app"
